if you upgrade to the next version. Skipping a version or downgrading
may require you to re-add any songs in the library.

Reloading your library after upgrading is always a good idea.
0.16 fixes a serious bug in APEv2 handling. Please reload your
Musepack files, and then use the "Force Write" plugin on them (or,
edit their tags and save them again).

0.16
 * Context menu plugins can make themselves insensitive. (#66)
 * More command-line and FIFO options. (#75)
 * Wavpack support. (#257)
 * Audio Feed (Podcast) support (requires http://www.feedparser.org). (#322)
 * "One Song" (and repeat) play mode. (#351)
 * Improved and configurable tray icon. (#360)
 * New install system that is more FHS-compliant. (#362)
 * ~#laststarted internal tag. (#392)
 * UI improvements:
   * ^W closes transient windows. (#326)
   * More DnD support. (#337)
   * HIG-compliance for strings.
   * Double-click files in browsers to enqueue them. (#341)
   * Rename Files error dialog has a "Skip" button. (#354)
   * Ctrl-Left/Right changed to Ctrl-,/.. (#355)
   * New icon that is not all black. (#371, thanks to Tobias and Fabien)
   * Paned Browser entries have context menus. (#375)
   * Volume icons follow GTK+/GNOME theme. (#389)
 * More memory and CPU optimizations. (#335, #346, #350)
 * Better GStreamer error handling. (thanks to Zack Weinberg, "calvin")
 * Updated translations:
   * Galician and Spanish, by Johám-Luís Miguéns Vila.
   * Italian, by Filippo Pappalardo.
   * Dutch, by Hans van Dok.
   * Finnish, by Jari Rahkonen.
   * Portguese, by Alexandre Passos. (#388)
   * French, by Joshua Kwan.
   * Polish, by Tomasz Torcz.

0.15 - Maybe I will.
 * An 'artist' tag can be stored in the library for MODs. (#277)
 * 'All Albums' remains on the album list after a search. (#282)
 * The Play Queue displays its total time and has a clear button. (#297, #304)
 * Songs can be enqueued multiple times.
 * '~people' includes more people. (#298)