@@ -99,7 +99,7 @@ class AudioFile(dict):
             if v is None:
                 return "%s [%s]" %(
                     os.path.basename(self["~filename"]).decode(
-                    util.fscoding(), "replace"), _("Unknown"))
+                    util.fscoding, "replace"), _("Unknown"))
             else: return v
         else: return dict.get(self, key, default)
 
