@@ -143,7 +143,7 @@ class Pattern(PatternParser):
         def comma(self, *args):
             value = self.__song.comma(*args)
             if isinstance(value, str):
-                value = value.decode(util.fscoding(), "replace")
+                value = value.decode(util.fscoding, "replace")
             elif not isinstance(value, unicode): value = unicode(value)
             for f in self.__formatters:
                 value = f(args[0], value)
