@@ -7,6 +7,11 @@ Reloading your library after upgrading is always a good idea.
 Musepack files, and then use the "Force Write" plugin on them (or,
 edit their tags and save them again).
 
+Quod Libet 0.16 and earlier check CHARSET to see what encoding the
+local filesystem uses. Quod Libet 0.16 and later use G_FILENAME_ENCODING.
+If you use non-UTF-8 filenames and don't use G_BROKEN_FILENAMES, you'll
+need to start setting G_FILENAME_ENCODING.
+
 0.16
  * Context menu plugins can make themselves insensitive. (#66)
  * More command-line and FIFO options. (#75)
@@ -27,7 +32,7 @@ edit their tags and save them again).
    * Paned Browser entries have context menus. (#375)
    * Volume icons follow GTK+/GNOME theme. (#389)
  * More memory and CPU optimizations. (#335, #346, #350)
- * Better GStreamer error handling. (thanks to Zack Weinberg, "calvin")
+ * GStreamer error handling. (thanks to Zack Weinberg and Bastian Kleineidam)
  * Updated translations:
    * Galician and Spanish, by Johám-Luís Miguéns Vila.
    * Italian, by Filippo Pappalardo.
